添加了工作详情弹出效果
加上一堆失败的案例 在delete中

--- a/Web.config
+++ b/Web.config
@@ -9,6 +9,7 @@
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5"/>
+    <httpRuntime maxRequestLength="102400" executionTimeout="60" appRequestQueueLimit="100"/>
   <!--  <httpRuntime targetFramework="4.5"/>-->
   </system.web>
 </configuration>
