--- a/Web.config
+++ b/Web.config
@@ -1,11 +1,13 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <!--
   有关如何配置 ASP.NET 应用程序的详细信息，请访问
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   <connectionStrings>
-    <add name="sqlservercon" connectionString="Data Source=RIZON\SQLEXPRESS;Initial Catalog=WebWorkManager;Integrated Security=True"/>
+    <add name="sqlservercon" connectionString="Data Source=RIZON\SQLEXPRESS;Initial Catalog=WebWorkManager;Integrated Security=True" />
+    <add name="WebWorkManagerConnectionString" connectionString="Data Source=RIZON\SQLEXPRESS;Initial Catalog=WebWorkManager;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5"/>
