--- a/Web.config
+++ b/Web.config
@@ -4,14 +4,25 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <appSettings>
+    <add key="CopyRight" value="版权所有张昊"/>
+  </appSettings>
   <connectionStrings>
-    <add name="sqlservercon" connectionString="Data Source=RIZON\SQLEXPRESS;Initial Catalog=WebWorkManager;Integrated Security=True" />
-    <add name="WebWorkManagerConnectionString" connectionString="Data Source=RIZON\SQLEXPRESS;Initial Catalog=WebWorkManager;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="sqlservercon" connectionString="Data Source=10.7.33.250;Initial Catalog=WebWorkManager;User ID=qqctu;Password=qqctu123456"/>
+    <add name="WebWorkManagerConnectionString" connectionString="Data Source=RIZON\SQLEXPRESS;Initial Catalog=WebWorkManager;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
+  <!--
+    有关 .NET 4.5 的 web.config 更改的说明，请参见 http://go.microsoft.com/fwlink/?LinkId=235367。
+
+    可在 <httpRuntime> 标记上设置以下特性。
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5"/>
+    <compilation targetFramework="4.5"/>
     <httpRuntime maxRequestLength="102400" executionTimeout="60" appRequestQueueLimit="100"/>
-  <!--  <httpRuntime targetFramework="4.5"/>-->
+    <!--  <httpRuntime targetFramework="4.5"/>-->
+    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
   </system.web>
 </configuration>
