--- a/Web.config
+++ b/Web.config
@@ -5,11 +5,11 @@
   -->
 <configuration>
   <appSettings>
-    <add key="CopyRight" value="版权所有张昊"/>
+    <add key="CopyRight" value="版权所有"/>
   </appSettings>
   <connectionStrings>
     <add name="sqlservercon" connectionString="Data Source=10.7.33.250;Initial Catalog=WebWorkManager;User ID=qqctu;Password=qqctu123456"/>
-    <add name="WebWorkManagerConnectionString" connectionString="Data Source=RIZON\SQLEXPRESS;Initial Catalog=WebWorkManager;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="WebWorkManagerConnectionString" connectionString="Data Source=RIZON\SQLEXPRESS;Initial Catalog=WebWorkManager;Integrated Security=True" />
   </connectionStrings>
   <!--
     有关 .NET 4.5 的 web.config 更改的说明，请参见 http://go.microsoft.com/fwlink/?LinkId=235367。
@@ -20,9 +20,16 @@
       </system.Web>
   -->
   <system.web>
-    <compilation targetFramework="4.5"/>
+    <compilation targetFramework="4.5" debug="true"/>
     <httpRuntime maxRequestLength="102400" executionTimeout="60" appRequestQueueLimit="100"/>
     <!--  <httpRuntime targetFramework="4.5"/>-->
     <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID"/>
   </system.web>
+  <system.webServer>
+    <defaultDocument>
+      <files>
+        <add value="login.aspx"/>
+      </files>
+    </defaultDocument>
+  </system.webServer>
 </configuration>
